<resources>
    <string name="app_name">NomNomApplication</string>
    <string name="strForgetPassword">Forget Password?</string>
    <string name="facebook_app_id">1451182088819442</string>
    <string name="fb_login_protocol_scheme">fb1451182088819442</string>
    <string name="strProfile">Profile</string>
    <string name="strSave">Save</string>
    <string name="strEnterumber">Enter your phone number</string>
    <string name="strPhoneNumber">Phone Number</string>
    <string name="strEnteraddress">Enter your address</string>
    <string name="strAddress">Address</string>
    <string name="strEnteremail">Enter your email</string>
    <string name="strEmail">Email</string>
    <string name="strEntername">Enter your name</string>
    <string name="strName">Name</string>
    <string name="strheader2">2. Service Terms</string>
    <string name="strheader1">1. Privacy Terms</string>
    <string name="strheader3">3. Return and Exchange Terms</string>
    <string name="strheader4">4. Payment Terms</string>
    <string name="strheader5">5. Cookies</string>
    <string name="strPolicy5">We use cookies to enhance your browsing experience and collect information about how you interact with our website. You can choose to accept or decline cookies through your browser settings, but please note that disabling cookies may affect the functionality of our website.</string>
    <string name="strheader6">6. Changes to Privacy Policy</string>
    <string name="strPolicy6">NomNom reserves the right to modify or amend this Privacy Policy at any time. Any changes will be effective immediately upon posting to the site. Your continued use of the site following the posting of changes to this policy will mean you accept those changes.</string>
    <string name="strheader7">7. Contact Us</string>
    <string name="strPolicy7"><![CDATA[If you have any questions about this Privacy Policy or our privacy practices, please contact us via email, livechat, hotline or social media channels immediately.]]></string>
    <string name="strPolicyFAQs"><![CDATA[Policy & FAQs]]></string>
    <string name="strdesPolicyFaqs">This Privacy Policy outlines how NomNom collects, uses, discloses, and protects your personal information.</string>
    <string name="strbottomtext">By using NomNom, you agree to the terms of this Privacy Policy. Thank you for trusting us with your personal information.</string>
    <string name="strPrivacy"><![CDATA[Protecting your privacy is important to us. This Privacy Policy outlines how NomNom collects, uses, discloses, and protects your personal information. By accessing or using our website and services, you consent to the collection and use of your information as described in this policy.\n\n1. Information Collection \n\nWe may collect personal information from you when you visit our website, place an order, subscribe to our newsletter, or engage with us through social media. The types of personal information we may collect include your name, email address, shipping address, payment information, and any other information you voluntarily provide to us.\n\n2. Use of Information \n\nWe use the information we collect to process your orders, communicate with you about your purchases, send you promotional offers and newsletters (if you opt-in), improve our products and services, and personalize your shopping experience. We may also use your information to detect and prevent fraud or unauthorized transactions.\n\n3. Disclosure of Information \n\nWe do not sell, trade, or otherwise transfer your personal information to outside parties unless we provide you with advance notice or obtain your consent. However, we may share your information with trusted third-party service providers who assist us in operating our website, conducting our business, or servicing you.\n\n4. Data Security \n\nWe implement a variety of security measures to safeguard your personal information against unauthorized access, alteration, disclosure, or destruction. We use encryption technology to protect sensitive information transmitted online and restrict access to your information to only those employees who need it to perform their duties.\n\n5. Cookies \n\nWe use cookies to enhance your browsing experience and collect information about how you interact with our website. You can choose to accept or decline cookies through your browser settings, but please note that disabling cookies may affect the functionality of our website.\n\n6. Changes to Privacy Policy \n\nNomNom reserves the right to modify or amend this Privacy Policy at any time. Any changes will be effective immediately upon posting to the site. Your continued use of the site following the posting of changes to this policy will mean you accept those changes.\n\n7. Contact Us \n\nIf you have any questions about this Privacy Policy or our privacy practices, please contact us immediately.\n\nBy using NomNom, you agree to the terms of this Privacy Policy. Thank you for trusting us with your personal information.]]></string>
    <string name="strPolicy2"><![CDATA[Welcome to NomNom! These Terms of Service govern your use of our website and services. By accessing or using NomNom, you agree to comply with these terms. Please read them carefully.\n\n1. Acceptance of Terms\n\nBy accessing or using NomNom, you agree to be bound by these Terms of Service. If you do not agree to all the terms and conditions of this agreement, then you may not access the website or use any services.\n\n2. Use of Services\n\nYou agree to use NomNom\'s services solely for lawful purposes and in accordance with these Terms of Service. You are responsible for maintaining the confidentiality of your account and password and for restricting access to your computer. You agree to accept responsibility for all activities that occur under your account or password.\n\n3. Privacy\n\nYour privacy is important to us. Please review our Privacy Policy to understand how we collect, use, and disclose information about you.\n\n4. Intellectual Property\n\nAll content on NomNom, including but not limited to text, graphics, logos, images, and software, is the property of NomNom or its licensors and is protected by copyright, trademark, and other laws. You may not modify, reproduce, distribute, or create derivative works based on such content without our prior written consent.\n\n5. Prohibited Activities: \n\nYou agree not to engage in any of the following prohibited activities:\n\nUse NomNom for any unlawful purpose or to violate any laws.\nAttempt to gain unauthorized access to any part of NomNom.\nInterfere with the proper functioning of NomNom.\nUpload or transmit any viruses, worms, or other malicious code.\nImpersonate any person or entity, or falsely state or misrepresent your affiliation with a person or entity.\n6. Disclaimer of Warranties\n\nNomNom is provided \"as is\" and \"as available\" without any warranty of any kind, express or implied. We do not warrant that NomNom will be uninterrupted, secure, or error-free.\n\n7. Limitation of Liability\n\nIn no event shall NomNom, its officers, directors, employees, or agents be liable for any indirect, incidental, special, consequential, or punitive damages, arising out of or in connection with your use of NomNom.\n\n8. Governing Law\n\nThese Terms of Service shall be governed by and construed in accordance with the laws of [insert jurisdiction], without regard to its conflict of law provisions.\n\n9. Changes to Terms of Service\n\nWe reserve the right to modify or replace these Terms of Service at any time. Your continued use of NomNom after any such changes constitutes acceptance of the new Terms of Service.\n\n10. Contact Us\n\nIf you have any questions about these Terms of Service, please contact us.\n\nBy using NomNom, you agree to be bound by these Terms of Service. Thank you for choosing NomNom!]]></string>
    <string name="strques1">Are there any special promotions or discounts available on NomNom\'s website?</string>
    <string name="strFAQs1">Yes, NomNom regularly offers special promotions and discounts to its customers.</string>
    <string name="strFAQs2">With NomNom, customers do not have to worry, because we are committed to providing good quality products at affordable prices. In particular, customers will receive the product and pay at the same time.</string>
    <string name="strques2">Are there any risks if I order online?</string>
    <string name="strques3">If I buy products in large quantities, will the price be reduced?</string>
    <string name="strFAQs3">When purchasing in large quantities, customers will enjoy incentives and discounts right at the time of purchase.</string>
    <string name="strques4">What are product return and exchange policies?</string>
    <string name="strFAQs4"><![CDATA[Customers please refer to NomNom\'s product return policy to be provided with the most complete and detailed information.\n\nNote: All products can be returned within 14 days from the date of receipt and the goods are guaranteed to retain their original product labels. (unused)]]></string>
    <string name="strques5">I made a purchase, but I don\'t like it, can I return it?</string>
    <string name="strFAQs5">When purchasing, if you are not satisfied with the product, please let The Swan know and we will immediately exchange the product for you. Just make sure the product is unused and has intact labels. We will support exchanges for customers.</string>
    <string name="strques6">What payment methods are accepted on NomNom\'s website?</string>
    <string name="strFAQs6">NomNom accepts various payment methods, including Momo, ZaloPay, VNPay, Internet Banking and Cash on Delivery (COD)</string>
    <string name="strques7">How long does it take for NomNom to deliver orders?</string>
    <string name="strFAQs7">NomNom offers\ndelivery within 2-4 working days and fast delivery within 2 hours.</string>
    <string name="strques8">How does NomNom ensure the quality of its products?</string>
    <string name="strFAQs8">By sourcing the finest ingredients and adhering to strict quality standards.</string>
    <string name="strques9">Can customers track their orders on NomNom\'s website?</string>
    <string name="strFAQs9">Yes, NomNom provides order tracking services to allow customers to monitor the status of their purchases.</string>
    <string name="strques10">How can customers contact NomNom for inquiries or assistance?</string>
    <string name="strFAQs10">Customers can reach out to NomNom for inquiries or assistance through email, phone, or social media channels.</string>
    <string name="strEnterCusName">Enter customer name</string>
    <string name="strEnterCusEmail">Enter customer email</string>
    <string name="strEnterCusPhone">Enter customer phone</string>
    <string name="strEnterCusAddress">Enter customer address</string>
    <string name="strCusProfile">Customer Profile</string>
    <string name="strBack">Back</string>
</resources>